Kubernetes-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetris
spec:
  selector:
    app: tetris
  ports:
  - protocol: TCP
    port: 80                 # Expose port 80
    targetPort: 3000
  type: ClusterIP
